--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.App"
         tools:targetApi="31">
         <activity
+            android:name=".calculator"
+            android:exported="false" />
+        <activity
+            android:name=".encrypt_decrypt"
+            android:exported="false" />
+        <activity
             android:name=".fibonacci"
             android:exported="false" />
         <activity
